PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

Backported from 7.4.31

- Core:
  . Fixed bug #81727: Don't mangle HTTP variable names that clash with ones
    that have a specific semantic meaning. (CVE-2022-31629). (Derick)

Backported from 7.4.30

- mysqlnd:
  . Fixed bug #81719: mysqlnd/pdo password buffer overflow.
    (CVE-2022-31626) (c dot fol at ambionics dot io)

- pgsql
  . Fixed bug #81720: Uninitialized array in pg_query_params().
    (CVE-2022-31625) (cmb)

18 Nov 2021, PHP 7.3.33

- XML:
  . Fix #79971: special character is breaking the path in xml function.
    (CVE-2021-21707) (cmb)

28 Oct 2021, PHP 7.3.32

- FPM:
  . Fixed bug #81026 (PHP-FPM oob R/W in root process leading to privilege
    escalation). (CVE-2021-21703) (Jakub Zelenka)

23 Sep 2021, PHP 7.3.31

- Zip:
  . Fixed bug #81420 (ZipArchive::extractTo extracts outside of destination).
    (CVE-2021-21706) (cmb)

26 Aug 2021, PHP 7.3.30

- Phar:
  . Fixed bug #81211: Symlinks are followed when creating PHAR archive (cmb)

01 Jul 2021, PHP 7.3.29

- Core:
  . Fixed bug #81122: SSRF bypass in FILTER_VALIDATE_URL. (CVE-2021-21705) (cmb)

- PDO_Firebird:
  . Fixed bug #76448: Stack buffer overflow in firebird_info_cb.
    (CVE-2021-21704) (cmb)
  . Fixed bug #76449: SIGSEGV in firebird_handle_doer. (CVE-2021-21704) (cmb)
  . Fixed bug #76450: SIGSEGV in firebird_stmt_execute. (CVE-2021-21704) (cmb)
  . Fixed bug #76452: Crash while parsing blob data in firebird_fetch_blob.
    (CVE-2021-21704) (cmb)

29 Apr 2021, PHP 7.3.28

- Core:
  . Fixed ./makedist wrt. to GH move. (cmb, Remi)

- Imap:
  . Fixed bug #80710 (imap_mail_compose() header injection). (cmb, Stas)

04 Feb 2021, PHP 7.3.27

- SOAP:
  . Fixed bug #80672 (Null Dereference in SoapClient). (CVE-2021-21702) (cmb, Stas)

07 Jan 2021, PHP 7.3.26

- Standard: